# microvm-minecraft

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
apps/: client.py
apps/microvm/: entrypoint.sh  fetch_jar.py  hook.py
cdk/: app.py  stack.py
