[project]
name = "microvm-minecraft"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.40",
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.49.0",
    "websockets>=16.0",
    "websockify>=0.13.0",
]

[dependency-groups]
dev = [
    "aws-cdk-lib>=2.260.0",
    "boto3-stubs[lambda-microvms]>=1.43.40",
    "constructs>=10.6.0",
    "ruff>=0.15.20",
    "ty>=0.0.56",
]

[tool.ruff.lint]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]
